- added "make/make.project" as default make include for external projects using SCIP
- adapted all makefiles of the examples accordingly
- added possibility to compile shared libraries in makefiles (and added make/make.linux.x86.gnu.opt-shared)
- replaced <string> by <cstring> in all C++-interfaces to get 'strlen()' included (gcc-4.3 gave an error)

interface:
- new method SCIPconsGetPos()
- new parameters "extension" and "genericnames" in SCIPprintTransProblem() defining the 
  requested format or NULL for default CIP format and using generic names for the variables and constraints
  e.g, SCIPprintTransProblem(scip, NULL, NULL, TRUE) displays the transformed problem in CIP format with generic 
  variables and constraint names 
- new parameters "extension" and "genericnames" in SCIPprintOrigProblem() defining the 
  requested format or NULL for default CIP format and using generic names for the variables and constraints
  e.g, SCIPprintOrigProblem(scip, NULL, "lp", FALSE) displays the original problem in LP format with original 
  variables and constraint names 
- new callback method SCIP_DECL_READERWRITE(x) in type_reader.h; this method is called  
  to write a problem to file stream in the format the reader stands for;
  useful for writing the transformed problem in LP or MPS format
- new parameter "conshdlrname" in SCIPincludeLinconsUpgrade() 
- new method SCIPrepropagateNode() to mark a node for repropagation
- new method SCIPcount() (in cons_countsols.h) for counting all feasible solution of a given CIP
- new method SCIPcreateRootDialog() (in dialog_default.h) which creates a root dialog
- new method SCIPbsortInd()
- replaced sorting methods SCIPbsort...() by faster (quicksort/shellsort) algorithms SCIPsort...()
  Note that the order of the paramters has been changed to simplify the template code in sorttpl.c!
- expand sorttpl.c by some parameters
- added some downwards-sorting methods
- changed some names for sorting methods